# razorfs

./: .gitignore  .gitmodules  AI_ENGINEERING_WORKFLOW.md  ALL_PHASES_COMPLETE.md  ARCHITECTURAL_REFACTOR_RESULTS.md  CACHE_LOCALITY_BENCH.md  CACHE_LOCALITY_WORKFLOW_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEAN_REPOSITORY_STRUCTURE.md  CONTRIBUTING.md  CROSS_COMPILE.md  Cache.md  DOCKER_TESTING_READY.md  DOCKER_WSL2_SETUP_GUIDE.md  Dockerfile  Dockerfile.compression-test  Dockerfile.filesystem-comparison  Dockerfile.unified-test  FEATURE_DEMO_SUMMARY.md  FILESYSTEM_EVOLUTION_STUDY.md  FILESYSTEM_TESTING_SUMMARY.md  FINAL_CREDIBLE_REPORT.md  FINAL_DELIVERY.md  FINAL_FEATURE_SUMMARY.md  FIXES_IMPLEMENTED.md  HOW_TO_TEST.md  KERNEL_FIXES_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  MEASUREMENT_ANALYSIS.md  MY_NEXT_MOVE.md  Makefile  Makefile.nary_comparison  Makefile.v2  NARY_TREE_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_ATTEMPT_RESULTS.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS_SUMMARY.md  (+128 more)
tests/: CMakeLists.txt  Makefile  README.md  TEST_SUITE.md  demo-phase1.sh  run-tests.sh  test_concurrency.cpp  test_mt  test_mt.c  test_mt_tsan  test_nary_tree  test_nary_tree.c  test_numa  test_numa.c  test_performance.cpp  test_posix.c  test_rebalance  test_rebalance.c  test_string_table  test_string_table.cpp
tests/benchmarks/: performance_comparison.cpp  test_cache_performance.cpp  test_enhanced_persistence.cpp  test_nary_simple.cpp  test_nary_vs_flat_performance.cpp  test_razor_v2_performance.cpp  test_s3_backend.c
tests/docker/: BENCHMARKS_README.md  benchmark_filesystems.sh  generate_enhanced_graphs.sh
tests/integration/: filesystem_test.cpp  test_advanced_error_handling  test_advanced_error_handling.c  test_basic_error_handling  test_basic_error_handling.c  test_comprehensive.c  test_crash_recovery.c  test_debug  test_debug_persistence.c  test_directory_ops.c  test_enhanced_transaction_logging.c  test_phase1_basic.c  test_phase1_posix_compliance.c  test_phase2_completion.c  test_real_persistence.c  test_rollback_functionality.c  test_simple_no_asan  test_simple_persistence.c  test_simple_recovery.c  test_simple_transaction.c  test_write_read.c
tests/results/: memory_safety_report.json  test_report_20250909_020108.html  test_report_20250909_020137.html  test_report_20250909_020506.html  test_report_20250909_021104.html  test_report_20250909_024028.html
tests/safety/: test_memory_safety.py
tests/shell/: Dockerfile  README.md  TESTING_GUIDE.md  benchmark-windows.sh  native-benchmark.sh  run-tests-windows.bat  run-tests-windows.ps1  run-tests.sh  visualize.gnuplot
tests/unit/: architecture_test.cpp  block_alloc_test.cpp  compression_test.cpp  concurrent_operations_test.cpp  extent_test.cpp  fuse_edge_cases_test.cpp  inode_table_test.cpp  (+9 more)
(+339 files in other folders)
